--- a/source/cli/MAABH3_CLI.vcxproj
+++ b/source/cli/MAABH3_CLI.vcxproj
@@ -137,7 +137,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>MaaUtils.lib;MaaFramework.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>MaaToolKit.lib;MaaFramework.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PreBuildEvent>
       <Command>xcopy "$(ProjectDir)..\..\3rdparty\bin\*" "$(TargetDir)" /s /e /y</Command>
