--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -220,8 +220,10 @@ jobs:
 
       - name: Build MAABH3
         env:
-          CC: "$(brew --prefix llvm)/bin/clang"
-          CXX: "$(brew --prefix llvm)/bin/clang++"
+          CC: "/opt/homebrew/opt/llvm/bin/clang"
+          CXX: "/opt/homebrew/opt/llvm/bin/clang++"
+          LDFLAGS: "-L/opt/homebrew/opt/llvm/lib"
+          CPPFLAGS: "-I/opt/homebrew/opt/llvm/include
         run: |
           cmake --preset 'NinjaMulti' \
             -DARCH='${{ matrix.arch == 'x86_64' && 'x64' || 'arm64' }}' \
