ci: remove mac x86_64

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -184,15 +184,11 @@ jobs:
 
   macos:
     needs: meta
+    runs-on: macos-latest
     strategy:
       matrix:
-        include:
-          - os: macos-13
-            arch: x86_64
-          - os: macos-14
-            arch: aarch64
+        arch: [aarch64]
       fail-fast: false
-    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v3
