--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,40 @@ jobs:
         run: |
           go run ./scripts/build -version=${{ needs.meta.outputs.tag }} --all
 
+      - name: Install
+        run: |
+         go run ./scripts/install --all
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: mba-linux-amd64
+          path: "install/linux-amd64"
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: mba-linux-arm64
+          path: "install/linux-arm64"
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: mba-windows-amd64
+          path: "install/windows-amd64"
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: mba-windows-arm64
+          path: "install/windows-arm64"
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: mba-darwin-amd64
+          path: "install/darwin-amd64"
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: mba-darwin-arm64
+          path: "install/darwin-arm64"
+
   # release:
   #   if: ${{ needs.meta.outputs.is_release == 'true' }}
   #   needs: [meta, build]
