ci: extend workflow paths for cmd, internal, and main.go

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,9 @@ on:
       - '.github/workflows/meta.yml'
       - '.github/workflows/build.yml'
       - 'assets/**'
+      - 'cmd/**'
+      - 'internal/**'
+      - 'main.go'
   pull_request:
     branches:
       - '**'
@@ -20,6 +23,9 @@ on:
       - '.github/workflows/meta.yml'
       - '.github/workflows/build.yml'
       - 'assets/**'
+      - 'cmd/**'
+      - 'internal/**'
+      - 'main.go'
   workflow_dispatch:
 
 jobs:
